--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-sass": "^4.0.2",
-    "gulp-watch": "^5.0.1"
+    "gulp-watch": "^5.0.1",
+    "gulp-changed": "^3.2.0",
+    "gulp-wait": "0.0.2",
+    "gulp-connect": "^2.2.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
