--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "gulpfile.js",
   "dependencies": {},
   "devDependencies": {
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "gulp": "^3.9.1",
-    "gulp-sass": "^4.0.2",
-    "gulp-watch": "^5.0.1",
     "gulp-changed": "^3.2.0",
+    "gulp-connect": "^2.2.0",
+    "gulp-sass": "^4.0.2",
     "gulp-wait": "0.0.2",
-    "gulp-connect": "^2.2.0"
+    "gulp-watch": "^5.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
