--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "description": "Responsive site design development",
   "main": "gulpfile.js",
-  "dependencies": {},
+  "dependencies": {
+    "eslint-config-airbnb": "^17.1.0"
+  },
   "devDependencies": {
     "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-changed": "^3.2.0",
-    "gulp-connect": "^2.2.0",
+    "gulp-connect": "^5.7.0",
     "gulp-sass": "^4.0.2",
     "gulp-wait": "0.0.2",
     "gulp-watch": "^5.0.1"
